syntax = "proto3";

package com.cooba.TradeSimulator.stock;

option java_multiple_files = true;
option java_package = "com.cooba.TradeSimulator.service";
option java_outer_classname = "StockProto";

// The greeting service definition.
service StockService {
    // Sends a greeting
    rpc GetStockInfo(StockRequest) returns (StockReply) {
    }
}

// The request message containing the user's name.
message StockRequest {
    string stockcode = 1;
}

// The response message containing the greetings
message StockReply {
    string stockcode = 1;
    string currentPrice = 3;
}